--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -26,7 +26,6 @@
 
 .title h1 {
 font-size: 2.75rem;
-
     text-align: center;
 } 
 
@@ -34,6 +33,7 @@ font-size: 2.75rem;
     height: fit-content;
     width: fit-content;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
 }
@@ -45,4 +45,14 @@ font-size: 2.75rem;
     box-shadow: 5px 5px 100px 5px var(--frog-white);
     margin-bottom: 1rem;
     object-fit: contain;
+}
+
+.imgContainer img:hover {
+        transform: scale(1.1);
+}
+
+.imgContainer p {
+    font-family: var(--font-text);
+    font-size: 1.5rem;
+    text-align: left;
 }
