--- a/src/index.css
+++ b/src/index.css
@@ -4,10 +4,14 @@
     --frog-lt: #C6D57A; */
     --frog-dk: #313D25;
     --frog-lt: #BFCB99;
+        --frog-lt-trans: #bfcb99a9;
     --frog-black: #060700;
     --frog-white: #DADCD1;
     --rose-dk: #BE3B65;
     --rose-lt: #EDA1AE;
+      --gold-lt: #ffe463;
+  --gold: #eec144;
+  --white: #ffffff;
   
     --font-title: "Slackey", sans-serif;
     --font-text: "Rubik", sans-serif;
