--- a/src/styles/Card.module.css
+++ b/src/styles/Card.module.css
@@ -1,12 +1,12 @@
 .cardContainer {
-  height: fit-content;
-  /* height: 27rem; */
+  /* height: fit-content; */
+  height: 33rem;
   width: fit-content;
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: start;
   background-color: white;
   border-radius: 1rem;
   box-shadow: 5px 5px 100px 5px var(--frog-dk);
@@ -35,6 +35,7 @@
 .plushies,
 .spanko {
   font-size: 1.125rem;
+  text-transform: capitalize;
 }
 
 .dinojama {
@@ -61,6 +62,7 @@
   height: 10rem;
   width: 10rem;
   background-color: white;
+  cursor: pointer;
   object-fit: contain;
 }
 
@@ -77,6 +79,7 @@
   height: 5rem;
   width: 5rem;
   background-color: white;
+    cursor: pointer;
   object-fit: contain;
 }
 
