--- a/src/styles/Dropdown.module.css
+++ b/src/styles/Dropdown.module.css
@@ -1,40 +1,39 @@
-/* styles/Dropdown.module.css */
+/* TODO - REORDER CSS */
 .dropdown {
-  position: relative;
   display: inline-block;
-  color: var(--frog-black);  
+  position: relative;
+  color: var(--frog-black);
   font-family: var(--font-text);
+
 }
 
 .dropdownButton {
-    width: 4.5rem;
-  padding: 0.5rem;
+  width: 5rem;
+  background: var(--frog-lt);
   border: 0.125rem solid var(--frog-black);
   border-radius: 0.25rem;
-  background: var(--frog-lt);
-  
   cursor: pointer;
+    font-size: 1rem;
+  padding: 0.5rem;
   text-transform: uppercase;
 }
 
 .dropdownList {
-    width: 4.5rem;
-    position: absolute;
-  margin-top: 0.3rem;
+  width: 5rem;
+  position: absolute;
   background: white;
   border: 1px solid #ccc;
   border-radius: 4px;
- 
   list-style: none;
+  margin-top: 0.3rem;
   padding: 0;
   text-transform: uppercase;
-
-  z-index: 1000;
+  z-index: 10;
 }
 
 .dropdownItem {
-  padding: 0.5rem;
   cursor: pointer;
+  padding: 0.5rem;
 }
 
 .dropdownItem:hover {
