--- a/src/styles/About.module.css
+++ b/src/styles/About.module.css
@@ -6,48 +6,57 @@
   flex-wrap: wrap;
   align-items: center;
   justify-content: center;
+  /* gap: 1rem; */
   background: linear-gradient(0deg, var(--frog-white), var(--rose-lt));
   border-radius: 1rem;
   box-shadow: 5px 5px 100px 5px var(--frog-dk);
-  padding: 1rem;
-  text-align: left;
+  /* padding: 1rem; */
+  /* text-align: left; */
 }
 
-.titleContainer {
+.titleTextContainer {
+  height: fit-content;
+  width: fit-content;
   display: flex;
   flex-direction: column;
   align-items: start;
   justify-content: start;
+  margin: 1rem;
 }
 
-.titleContainer h1 {
+.titleTextContainer h1 {
   color: var(--frog-black);
   font-family: var(--font-title);
   font-size: 1.5rem;
 }
 
-.titleContainer img {
-  height: 15rem;
-  width: 15rem;
-  border-radius: 1rem;
-  /* box-shadow: 5px 5px 100px 5px var(--frog-white); */
-  /* margin-bottom: 1rem; */
-  object-fit: cover;
-}
-
-.textContainer {
-  height: fit-content;
-  width: fit-content;
-  display: flex;
-  flex-direction: column;
-    align-items: center;
-  justify-content: center;
-  padding: 1rem;
-}
-
-.textContainer p {
+.titleTextContainer p {
 color: var(--frog-black);
   font-family: var(--font-text);
   font-size: 1.125rem;
   text-align: left;
 }
+
+.imageContainer {
+  height: fit-content;
+  width: fit-content;
+
+  /* display: flex;
+  flex-direction: column;
+    align-items: center;
+  justify-content: center;
+  flex-wrap: wrap; */
+  /* padding: 1rem; */
+  margin: 1rem;
+}
+
+.imageContainer img {
+  height: 15rem;
+  width: 15rem;
+  /* border-radius: 1rem; */
+  /* box-shadow: 5px 5px 100px 5px var(--frog-white); */
+  /* margin-bottom: 1rem; */
+    border-radius: 50%;
+    object-fit: contain;
+}
+
