--- a/src/styles/Modal.module.css
+++ b/src/styles/Modal.module.css
@@ -1,59 +1,60 @@
-  .overlay {
-    position: fixed;
-    top: 0; left: 0;
-    width: 100vw;
-    height: 100vh;
-    background-color: var(--frog-lt-trans);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    z-index: 1000;
-  }
+.overlay {
+  height: 100vh;
+  width: 100vw;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: var(--frog-lt-trans);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 1000;
+}
 
-  .modal {
-    position: relative;
-    max-width: 85%;
-    max-height: 85%;
-  }
+.modal {
+  max-width: 85%;
+  max-height: 85%;
+  position: relative;
+}
 
-  .image {
-    height: 100%;
-    width: auto;
-    border-radius: 0.25rem;
+.image {
+  height: 100%;
+  width: auto;
+  border-radius: 0.25rem;
   box-shadow: 5px 5px 100px 5px var(--frog-dk);
-  }
+}
 
-  .closeButton {
-    position: absolute;
-    top: 0.5rem;
-    right: 0.5rem;
-    background: transparent;
-    color: var(--frog-black);
-    font-size: 3.5rem;
-    border: none;
-    cursor: pointer;
-  }
+.closeButton {
+  position: absolute;
+  top: 0.5rem;
+  right: 0.5rem;
+  background: transparent;
+  border: none;
+  color: var(--frog-black);
+  cursor: pointer;
+  font-size: 3.5rem;
+}
 
-  .arrowLeft {
-    position: absolute;
-    top: 50%;
-    left: -1.65rem;
-    transform: translateY(-50%);
-    font-size: 3.75rem;
-   color: var(--frog-black);
-    background: none;
-    border: none;
-    cursor: pointer;
-  }
+.arrowLeft {
+  position: absolute;
+  top: 50%;
+  left: -1.65rem;
+  transform: translateY(-50%);
+  font-size: 3.75rem;
+  background: none;
+  border: none;
+  color: var(--frog-black);
+  cursor: pointer;
+}
 
-  .arrowRight {
-    position: absolute;
-    top: 50%;
-    right: -1.65rem;
-    transform: translateY(-50%);
-    font-size: 3.75rem;
-    color: var(--frog-black);
-    background: none;
-    border: none;
-    cursor: pointer;
-  }
+.arrowRight {
+  position: absolute;
+  top: 50%;
+  right: -1.65rem;
+  transform: translateY(-50%);
+  background: none;
+  border: none;
+  color: var(--frog-black);
+  cursor: pointer;
+  font-size: 3.75rem;
+}
