--- a/src/styles/About.module.css
+++ b/src/styles/About.module.css
@@ -6,12 +6,9 @@
   flex-wrap: wrap;
   align-items: center;
   justify-content: center;
-  /* gap: 1rem; */
   background: linear-gradient(0deg, var(--frog-white), var(--rose-lt));
   border-radius: 1rem;
   box-shadow: 5px 5px 100px 5px var(--frog-dk);
-  /* padding: 1rem; */
-  /* text-align: left; */
 }
 
 .titleTextContainer {
@@ -25,13 +22,13 @@
 }
 
 .titleTextContainer h1 {
-  color: var(--frog-black);
+  color: var(--rose-dk);
   font-family: var(--font-title);
   font-size: 1.5rem;
 }
 
 .titleTextContainer p {
-color: var(--frog-black);
+  color: var(--frog-black);
   font-family: var(--font-text);
   font-size: 1.125rem;
   text-align: left;
@@ -40,23 +37,12 @@ color: var(--frog-black);
 .imageContainer {
   height: fit-content;
   width: fit-content;
-
-  /* display: flex;
-  flex-direction: column;
-    align-items: center;
-  justify-content: center;
-  flex-wrap: wrap; */
-  /* padding: 1rem; */
   margin: 1rem;
 }
 
 .imageContainer img {
   height: 15rem;
   width: 15rem;
-  /* border-radius: 1rem; */
-  /* box-shadow: 5px 5px 100px 5px var(--frog-white); */
-  /* margin-bottom: 1rem; */
-    border-radius: 50%;
-    object-fit: contain;
+  border-radius: 50%;
+  object-fit: contain;
 }
-
