--- a/src/styles/Button.module.css
+++ b/src/styles/Button.module.css
@@ -10,28 +10,27 @@
   padding: 0.5rem;
 }
 
-.button:hover {
+/* TODO - set up a default style? */
+
+.cart {
+  padding: 0.5rem 1rem;
+  background-color: var(--frog-dk);
+    border: 0.125rem solid var(--frog-black);
+  border-radius: 4px;
+  color: var(--white);
+  cursor: pointer;
+  font-family: var(--font-text);
+  font-size: 1rem;
+  text-transform: uppercase;
+}
+
+.cart:hover {
   background-color: var(--gold);
   border: 0.125rem solid var(--frog-black);
   color: var(--frog-black);
   transform: scale(1.1);
 }
 
-.button:active {
+.cart:active {
   transform: scale(0.9);
 }
-
-/* .default,
-.directions {
-  background-color: var(--red);
-  border: 0.125rem solid var(--gold-lt);
-  border-radius: 1rem;
-  box-shadow: 0 2px 10px var(--black);
-  color: var(--gold-lt);
-  font-family: var(--font-logo);
-  font-size: var(--button-font-size);
-} */
-
-/* .directions {
-  font-size: var(--header-MMM-size);
-} */
