--- a/src/styles/Contact.module.css
+++ b/src/styles/Contact.module.css
@@ -6,11 +6,11 @@
   flex-wrap: wrap;
   align-items: center;
   justify-content: center;
+  gap: 1rem;
   background: linear-gradient(0deg, var(--frog-white), var(--gold-lt));
   border-radius: 1rem;
   box-shadow: 5px 5px 100px 5px var(--frog-dk);
   padding: 1rem;
-  /* text-align: left; */
 }
 
 .titleContainer {
@@ -21,17 +21,31 @@
 }
 
 .titleContainer h1 {
-  color: var(--frog-black);
+  color: var(--rose-dk);
   font-family: var(--font-title);
   font-size: 1.5rem;
 }
 
-.titleContainer img {
+.titleContainer p {
+  color: var(--frog-black);
+  font-family: var(--font-text);
+  font-size: 1.125rem;
+}
+
+.imgContainer {
+  height: fit-content;
+  max-width: fit-content;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+}
+
+.imgContainer img {
   height: 15rem;
   width: 15rem;
   border-radius: 50%;
-  /* box-shadow: 5px 5px 100px 5px var(--frog-white); */
-  /* margin-bottom: 1rem; */
   object-fit: cover;
 }
 
@@ -40,28 +54,37 @@
   width: fit-content;
   display: flex;
   flex-direction: column;
-    align-items: start;
+  align-items: start;
   justify-content: start;
-    font-family: var(--font-text);
-  padding: 1rem;
+  font-family: var(--font-text);
 }
 
 .textContainer h2 {
-color: var(--frog-black);
-font-family: var(--font-title);
+  color: var(--rose-dk);
+  font-family: var(--font-title);
   font-size: 1.125rem;
   text-align: left;
   text-transform: uppercase;
 }
 
-.textContainer p {
-color: var(--frog-black);
+.textContainer h3 {
+  color: var(--frog-dk);
   font-size: 1.125rem;
   text-align: left;
 }
 
+.textContainer p {
+  color: var(--frog-black);
+  font-size: 1.125rem;
+  text-align: left;
+}
+
+.textContainer p:not(:last-child) {
+  margin-bottom: 1rem;
+}
+
 .bold {
-    font-weight: 800;
+  font-weight: 800;
 }
 
 .italic {
