--- a/src/styles/Navbar.module.css
+++ b/src/styles/Navbar.module.css
@@ -3,6 +3,10 @@
   width: 100vw;
   position: sticky;
   top: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   background-color: var(--rose-dk);
   margin: 0 auto;
   padding: 0.5rem;
@@ -42,4 +46,27 @@
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.searchContainer {
+  height: fit-content;
+  width: fit-content;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  /* background-color: var(--rose-lt); */
+  border-radius: 2rem;
+  font-family: var(--font-text);
+  margin: 0.5rem;
+  padding: 0.5rem;
+}
+
+.search {
+  height: 2rem;
+  width: 35ch;
+    border-radius: 0.5rem;
+
+  font-family: var(--font-text);
+  /* margin-left: 0.5rem; */
 }
