--- a/src/styles/Shop.module.css
+++ b/src/styles/Shop.module.css
@@ -8,5 +8,8 @@
   justify-content: center;
   gap: 1rem;
   border-radius: 1rem;
+  font-family: var(--font-title);
+  font-size: 1.5rem;
+  text-transform: uppercase;
   padding: 1rem;
 }
