fix: putting different sizes of the same onesie in the same cart and incrementing/decrementing one, no longer changes quantity for both entries

--- a/src/styles/Button.module.css
+++ b/src/styles/Button.module.css
@@ -28,9 +28,29 @@
   background-color: var(--gold);
   border: 0.125rem solid var(--frog-black);
   color: var(--frog-black);
-  transform: scale(1.1);
 }
 
-.cart:active {
-  transform: scale(0.9);
+.paypalButton {
+    /* PayPal Yellow? */
+  background-color: #ffc439;
+}
+
+.cardButton {
+    /* Credit Card Blue? */
+  background-color: #0070f3;
+  color: white;
+}
+
+.appleButton {
+    /* Steve Jobs Black? */
+  background-color: #000;
+  color: white;
+}
+
+.cart:hover, .paypalButton:hover, .cardButton:hover, .appleButton:hover {
+  transform: scale(1.05);
+}
+
+.cart:active, .paypalButton:active, .cardButton:active, .appleButton:active {
+  transform: scale(0.95);
 }
