--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,10 @@
 main {
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin: 1rem;
-  padding: 1rem;
+  margin: 0.5rem;
+  /* padding: 0.5rem; */
 }
 
 .loading-msg-div {
