--- a/src/styles/Button.module.css
+++ b/src/styles/Button.module.css
@@ -7,13 +7,12 @@
   border: transparent;
   cursor: pointer;
   font-size: 1rem;
-  padding: 0.5rem;
+  /* padding: 0.5rem; */
 }
 
 /* TODO - set up a default style? */
 
 .cart {
-  padding: 0.5rem 1rem;
   background-color: var(--frog-dk);
     border: 0.125rem solid var(--frog-black);
   border-radius: 4px;
@@ -21,6 +20,7 @@
   cursor: pointer;
   font-family: var(--font-text);
   font-size: 1rem;
+    padding: 0.5rem 1rem;
   text-transform: uppercase;
 }
 
@@ -53,4 +53,30 @@
 
 .cart:active, .paypalButton:active, .cardButton:active, .appleButton:active {
   transform: scale(0.95);
+}
+
+.incrementDecrementButton {
+  height: 2rem;
+  width: 2rem;
+  background-color: var(--rose-dk);
+  border-radius: 4px;
+  color: var(--gold);
+cursor: pointer;
+font-family: var(--font-text);
+font-size: 1.5rem;
+}
+
+.removeCartItem {
+  display: block;
+  width: 100%;
+  background-color: var(--frog-black);
+   border: 4px solid var(--gold-lt);
+border-radius: 0.5rem;
+  color: var(--gold-lt);
+  cursor: pointer; 
+ font-size: 1rem;
+
+    padding: 0.75rem;
+ 
+text-transform: uppercase;
 }
