--- a/src/styles/Navbar.module.css
+++ b/src/styles/Navbar.module.css
@@ -72,7 +72,7 @@
 }
 
 .cartItemsContainer {
-    position: relative;  /* Ensure the badge is positioned relative to this container */
+  position: relative;  /* Ensure the badge is positioned relative to this container */
 
   display: flex;
   align-items: center;
@@ -100,13 +100,19 @@
   position: absolute; /* Position it on top of the cart icon */
   top: -5px; /* Adjust based on the icon size */
   right: -5px; /* Adjust based on the icon size */
+  height: 1.5rem;
+  width: 1.5rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   background-color: var(--gold);
+  /* border: 4px solid var(--rose-dk); */
   border-radius: 50%;
   color: var(--frog-black);
   font-family: var(--font-text);
   font-size: 1rem;
   font-weight: 600;
   opacity: 0.95;
-  padding: 0.25rem 0.65rem; /* Adjust padding for better fit */
+  padding: 0.25rem;
   z-index: 10; /* Make sure the number stays on top */
 }
