--- a/src/styles/About.module.css
+++ b/src/styles/About.module.css
@@ -31,6 +31,7 @@
   color: var(--frog-black);
   font-family: var(--font-text);
   font-size: 1.125rem;
+  font-weight: 500;
   text-align: left;
 }
 
