--- a/src/styles/Modal.module.css
+++ b/src/styles/Modal.module.css
@@ -1,9 +1,9 @@
 .overlay {
-  height: 100vh;
-  width: 100vw;
   position: fixed;
   top: 0;
   left: 0;
+  height: 100vh;
+  width: 100vw;
   background-color: var(--frog-lt-trans);
   display: flex;
   align-items: center;
@@ -11,17 +11,37 @@
   z-index: 1000;
 }
 
-.modal {
+/* .modal {
+  position: relative;
   max-width: 85%;
   max-height: 85%;
+} */
+
+.modal {
   position: relative;
+  max-width: 90vw;
+  max-height: 90vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.image {
+/* .image {
   height: 100%;
   width: auto;
   border-radius: 0.25rem;
   box-shadow: 5px 5px 100px 5px var(--frog-dk);
+  object-fit: cover;
+} */
+
+.image {
+  max-height: 90%;
+  max-width: 90%;
+  height: auto;
+  width: auto;
+  border-radius: 0.25rem;
+  box-shadow: 5px 5px 100px 5px var(--frog-dk);
+  object-fit: contain;
 }
 
 .closeButton {
@@ -58,3 +78,21 @@
   cursor: pointer;
   font-size: 3.75rem;
 }
+
+/* @media (max-width: 600px) {
+  .modal {
+    max-width: 95vw;
+    max-height: 80vh;
+  }
+
+  .closeButton {
+    font-size: 2.5rem;
+  }
+
+  .arrowLeft,
+  .arrowRight {
+    font-size: 2.5rem;
+    left: -1rem;
+    right: -1rem;
+  }
+} */
