--- a/src/styles/Shop.module.css
+++ b/src/styles/Shop.module.css
@@ -4,7 +4,7 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  align-items: center;
+  align-items: start;
   justify-content: center;
   gap: 1rem;
   border-radius: 1rem;
