refactor: all css modules

--- a/src/index.css
+++ b/src/index.css
@@ -1,23 +1,20 @@
-
 :root {
-  /* --frog-dk: #7C8C00;
-  --frog-lt: #C6D57A; */
-  --frog-dk: #313D25;
-  --frog-lt: #BFCB99;
+  --frog-dk: #313d25;
+  --frog-lt: #bfcb99;
   --frog-lt-trans: #bfcb99a9;
   --frog-black: #060700;
-  --frog-white: #DADCD1;
-  --rose-dk: #BE3B65;
-  --rose-lt: #EDA1AE;
+  --frog-white: #dadcd1;
+  --rose-dk: #be3b65;
+  --rose-lt: #eda1ae;
   --gold-lt: #ffe463;
   --gold: #eec144;
   --white: #ffffff;
 
   --font-title: "Slackey", sans-serif;
   --font-text: "Rubik", sans-serif;
-  --font-dinojama: "Barrio", system-ui;;
+  --font-dinojama: "Barrio", system-ui;
   --font-jammy-mart: "Mystery Quest", system-ui;
-  --font-mooshiDoo:  "Hanalei Fill", system-ui;
+  --font-mooshiDoo: "Hanalei Fill", system-ui;
   --font-plushies: "Matemasie", sans-serif;
   --font-spanko: "Bangers", system-ui;
 }
@@ -65,28 +62,16 @@ body {
 }
 
 li {
-    list-style: none;
+  list-style: none;
 }
 
 .footer {
-    display: flex;
-    flex-wrap: wrap;
-    align-items: end;
-    justify-content: center;
-    color: var(--frog-dk);
-    font-family: var(--font-title);
-    font-size: 0.9rem;
-    margin: 1rem;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: end;
+  justify-content: center;
+  color: var(--frog-dk);
+  font-family: var(--font-title);
+  font-size: 0.9rem;
+  margin: 1rem;
 }
-
-/* .font-title {
-  font-family: "Slackey", sans-serif;
-  font-weight: 400;
-  font-style: normal;
-}
-
-.font-text {
-  font-family: "Dongle", sans-serif;
-  font-weight: 400;
-  font-style: normal;
-} */
