styles: testing various css size changes for mobile views

--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,9 @@
   --font-mooshiDoo: "Hanalei Fill", system-ui;
   --font-plushies: "Matemasie", sans-serif;
   --font-spanko: "Bangers", system-ui;
+
+  --font-size-title-regular: ;
+  --font-size-title-grand: ;
 }
 
 *,
