--- a/src/styles/Card.module.css
+++ b/src/styles/Card.module.css
@@ -6,17 +6,18 @@
   flex-direction: column;
   align-items: center;
   justify-content: start;
+  gap: 0.25rem;
   background-color: var(--white);
   border-radius: 1rem;
   box-shadow: 5px 5px 100px 5px var(--frog-dk);
-  padding: 1rem;
+  padding: 0.25rem;
 }
 
 .cardContainer h1 {
   color: var(--rose-dk);
   font-family: var(--font-title);
-  font-size: 2rem;
-  margin-top: 0.5rem;
+  font-size: 1.65rem;
+  /* margin-top: 0.5rem; */
   text-transform: capitalize;
 }
 
@@ -24,7 +25,7 @@
   font-family: var(--font-text);
   font-size: 1rem;
   font-style: italic;
-  margin-bottom: 0.5rem;
+  /* margin-bottom: 0.5rem; */
   text-transform: lowercase;
 }
 
@@ -33,7 +34,7 @@
 .mooshiFoo,
 .plushies,
 .spanko {
-  font-size: 1.125rem;
+  font-size: 1.25rem;
   font-style: normal;
   text-transform: capitalize;
 }
@@ -75,7 +76,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding: 0.5rem;
+  padding: 0.25rem;
 }
 
 .smallSideImg {
@@ -89,7 +90,8 @@
 .detailsContainer,
 .priceContainer,
 .buttonContainer {
-  width: 18rem;
+  width: 18.5rem;
+  /* width: fit-content; */
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
@@ -98,7 +100,7 @@
   gap: 0.5rem;
   background-color: var(--white);
   font-family: var(--font-text);
-  padding: 0.5rem;
+  padding: 0.25rem;
 }
 
 .detailsContainer {
@@ -115,7 +117,7 @@
   border: 4px dashed var(--frog-black);
   border-radius: 4px;
   font-style: italic;
-  padding: 0.25rem 0.5rem;
+  padding: 0.125rem
 }
 
 .stockNumber,
@@ -129,7 +131,7 @@
   flex-wrap: wrap;
   background-color: var(--rose-lt);
   border-radius: 1rem;
-  padding: 0.5rem;
+  padding: 0.25rem 0.5rem;
   text-transform: capitalize;
 }
 
@@ -159,7 +161,7 @@
   border-radius: 4px;
   color: var(--rose-dk);
   font-weight: 800;
-  margin-top: 1rem;
+  margin-top: 0.25rem;
   padding: 6px 10px;
   text-align: center;
 }
