--- a/src/styles/CheckoutCard.module.css
+++ b/src/styles/CheckoutCard.module.css
@@ -3,9 +3,9 @@
   width: fit-content;
   display: flex;
   flex-direction: column;
-  gap: 0.5rem;
+  gap: 0.25rem;
   background-color: var(--gold-lt);
-  border-radius: 0.5rem;
+  border-radius: 1rem;
   box-shadow: 5px 5px 100px 5px var(--gold);
   color: var(--frog-black);
   font-family: var(--font-text);
@@ -34,7 +34,8 @@
 .brand {
   font-family: var(--font-text);
   font-style: italic;
-  margin-top: 0.125rem;
+  text-transform: lowercase;
+  /* margin-top: 0.125rem; */
 }
 
 .dinojama,
@@ -68,13 +69,14 @@
 
 .rowContainer {
   display: flex;
-  gap: 0.5rem;
+  gap: 0.25rem;
 }
 
 .colContainer {
   display: flex;
   flex-direction: column;
   align-items: center;
+  gap: 0.25rem;
   justify-content: space-between;
 }
 
@@ -89,8 +91,9 @@
   border: 4px solid var(--gold-lt);
   border-radius: 0.5rem;
   color: var(--frog-black);
+  font-size: 0.9rem;
   object-fit: contain;
-  padding: 0.5rem;
+  padding: 0.25rem;
 }
 
 .image {
@@ -104,7 +107,7 @@
 
 .price {
   color: var(--frog-dk);
-  font-size: 1.5rem;
+  font-size: 1.25rem;
   font-weight: 800;
 }
 
@@ -119,6 +122,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   gap: 0.125rem;
   border-radius: 0.5rem;
   border: 4px solid var(--gold-lt);
