--- a/src/styles/Dropdown.module.css
+++ b/src/styles/Dropdown.module.css
@@ -6,7 +6,7 @@
 }
 
 .dropdownButton {
-  width: 5rem;
+  width: 4.75rem;
   background: var(--frog-lt);
   border: 0.125rem solid var(--frog-black);
   border-radius: 0.25rem;
@@ -18,12 +18,13 @@
 
 .dropdownList {
   position: absolute;
-  width: 5rem;
+  width: 4.75rem;
   background: var(--white);
   border: 1px solid var(--frog-black);
   border-radius: 4px;
   list-style: none;
-  margin-top: 0.3rem;
+  /* margin-top: 0.3rem; */
+    margin-top: 0.25rem;
   padding: 0;
   text-transform: uppercase;
   z-index: 10;
