styles: more tweaks to various css for mobile testing

--- a/src/styles/Card.module.css
+++ b/src/styles/Card.module.css
@@ -1,6 +1,7 @@
 .cardContainer {
   height: fit-content;
-  width: fit-content;
+  /* width: fit-content; */
+    max-width: 20rem;
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
@@ -88,9 +89,9 @@
 }
 
 .detailsContainer,
-.priceContainer,
+/* .priceContainer, */
 .buttonContainer {
-  width: 18.5rem;
+  max-width: 20rem;
   /* width: fit-content; */
   display: flex;
   flex-direction: row;
@@ -108,8 +109,19 @@
 }
 
 .priceContainer {
+  width: 18.5rem;
+  /* width: fit-content; */
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  gap: 0.5rem;
+  background-color: var(--white);
   color: var(--frog-black);
-  font-size: 1.25rem;
+  font-family: var(--font-text);
+  font-size: 1.125rem;
+  /* padding: 0.25rem; */
 }
 
 .priceSavings {
@@ -117,7 +129,7 @@
   border: 4px dashed var(--frog-black);
   border-radius: 4px;
   font-style: italic;
-  padding: 0.125rem
+  padding: 0.125rem 0.25rem;
 }
 
 .stockNumber,
