--- a/src/styles/ShoppingCart.module.css
+++ b/src/styles/ShoppingCart.module.css
@@ -1,12 +1,13 @@
 .mainContainer {
   display: flex;
   flex-direction: column;
+  flex-wrap: wrap;
   align-items: center;
   justify-content: center;
   font-family: var(--font-text);
 }
 
-h1 {
+.title {
   color: var(--rose-dk);
   font-family: var(--font-title);
   text-align: center;
@@ -53,14 +54,14 @@ h1 {
 }
 
 .summaryContainer {
-  width: 304px;
+  width: 300px;
   background: var(--white);
   color: var(--frog-black);
   padding: 1rem;
   border-radius: 0.5rem;
-  max-width: 400px;
+  /* max-width: 400px; */
   /* margin: 2rem auto; */
-  margin: 1rem;
+  /* margin: 1rem; */
 }
 
 .summaryLine,
