--- a/src/styles/Button.module.css
+++ b/src/styles/Button.module.css
@@ -17,7 +17,7 @@
   cursor: pointer;
   font-family: var(--font-text);
   font-size: 1rem;
-  padding: 0.5rem 1rem;
+  padding: 0.5rem;
   text-transform: uppercase;
 }
 
@@ -72,7 +72,7 @@
   text-transform: uppercase;
 }
 
-.cart:hover,
+/* .cart:hover, */
 .paypalButton:hover,
 .cardButton:hover,
 .appleButton:hover,
