styling: more css tweaks to test in mobile

--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -12,7 +12,8 @@
 }
 
 .title {
-  color: var(--rose-dk);
+  /* color: var(--rose-dk); */
+    color: var(--gold);
   font-family: var(--font-title);
   text-align: center;
 }
@@ -37,10 +38,10 @@
 }
 
 .imgContainer img {
-  /* height: 15rem;
-  width: 15rem; */
-  height: 20rem;
-  width: 20rem;
+  height: 15rem;
+  width: 15rem;
+  /* height: 20rem;
+  width: 20rem; */
   border-radius: 50%;
   box-shadow: 5px 5px 100px 5px var(--frog-white);
   margin-bottom: 1rem;
