--- a/src/styles/Button.module.css
+++ b/src/styles/Button.module.css
@@ -4,9 +4,11 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  border: transparent;
+  /* border: transparent; */
   cursor: pointer;
+   font-family: var(--font-text);
   font-size: 1rem;
+  padding: 0.5rem;
 }
 
 .cart {
@@ -14,10 +16,10 @@
   border: 0.125rem solid var(--frog-black);
   border-radius: 4px;
   color: var(--white);
-  cursor: pointer;
-  font-family: var(--font-text);
-  font-size: 1rem;
-  padding: 0.5rem;
+  /* cursor: pointer; */
+  /* font-family: var(--font-text); */
+  /* font-size: 1rem; */
+  /* padding: 0.5rem; */
   text-transform: uppercase;
 }
 
@@ -51,10 +53,11 @@
   height: 2rem;
   width: 2rem;
   background-color: var(--rose-dk);
+  border: 0.125rem solid var(--rose-dk);
   border-radius: 4px;
   color: var(--gold);
-  cursor: pointer;
-  font-family: var(--font-text);
+  /* cursor: pointer; */
+  /* font-family: var(--font-text); */
   font-size: 1.5rem;
 }
 
@@ -65,10 +68,10 @@
   border: 4px solid var(--gold-lt);
   border-radius: 0.5rem;
   color: var(--gold-lt);
-  cursor: pointer;
-  font-size: 1rem;
+  /* cursor: pointer; */
+  /* font-size: 1rem; */
   font-weight: 800;
-  padding: 0.75rem;
+  /* padding: 0.5rem; */
   text-transform: uppercase;
 }
 
