--- a/src/styles/Dropdown.module.css
+++ b/src/styles/Dropdown.module.css
@@ -6,10 +6,20 @@
 }
 
 .dropdownButton {
-  width:5rem;
+  height: fit-content;
+  /* width: fit-content; */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  /* border: transparent; */
+  /* cursor: pointer; */
+  /* font-size: 1rem; */
+
+  /* height: fit-content; */
+  width: 5rem;
   background: var(--frog-lt);
   border: 0.125rem solid var(--frog-black);
-  border-radius: 0.25rem;
+  border-radius: 4px;
   cursor: pointer;
   font-size: 1rem;
   padding: 0.5rem;
@@ -18,9 +28,10 @@
 
 .dropdownList {
   position: absolute;
-  width:5rem;
+  height: fit-content;
+  width: 5rem;
   background: var(--white);
-  border: 1px solid var(--frog-black);
+  border: 0.125rem solid var(--frog-black);
   border-radius: 4px;
   list-style: none;
   /* margin-top: 0.3rem; */
