--- a/src/styles/Navbar.module.css
+++ b/src/styles/Navbar.module.css
@@ -2,7 +2,8 @@
   position: sticky;
   top: 0;
   height: fit-content;
-  width: 100vw;
+  /* width: 100vw; */
+    width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
