--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,11 @@
 main {
+  width: 100vw;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin: 0.5rem;
+  /* margin: 0.5rem; */
+  margin: auto;
 }
 
 .loading-msg-div {
