--- a/src/styles/About.module.css
+++ b/src/styles/About.module.css
@@ -9,6 +9,7 @@
   background: linear-gradient(0deg, var(--frog-white), var(--rose-lt));
   border-radius: 1rem;
   box-shadow: 5px 5px 100px 5px var(--frog-dk);
+  margin: 1rem;
 }
 
 .titleTextContainer {
