--- a/src/styles/Contact.module.css
+++ b/src/styles/Contact.module.css
@@ -10,6 +10,7 @@
   background: linear-gradient(0deg, var(--frog-white), var(--gold-lt));
   border-radius: 1rem;
   box-shadow: 5px 5px 100px 5px var(--frog-dk);
+   margin: 1rem;
   padding: 1rem;
 }
 
