--- a/src/styles/Shop.module.css
+++ b/src/styles/Shop.module.css
@@ -11,6 +11,7 @@
   font-family: var(--font-title);
   /* font-size: 1.25rem; */
   text-transform: uppercase;
+  margin: 1rem;
   padding: 0.5rem;
 }
 
